Bug 477885 - Window is visually in `inactive` state when pressing `Alt-TAB` multiple times to open window switcher but not actually switch
Summary: Window is visually in `inactive` state when pressing `Alt-TAB` multiple times...
Status: RESOLVED FIXED
Alias: None
Product: kwin
Classification: Plasma
Component: tabbox (other bugs)
Version First Reported In: 5.90.0
Platform: Arch Linux Linux
: NOR minor
Target Milestone: ---
Assignee: KWin default assignee
URL:
Keywords: qt6
Depends on:
Blocks:
 
Reported: 2023-12-02 03:11 UTC by Jin Liu
Modified: 2024-01-12 10:48 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
screencast (1.37 MB, video/webm)
2023-12-02 03:11 UTC, Jin Liu
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Jin Liu 2023-12-02 03:11:28 UTC
Created attachment 163739 [details]
screencast

STEPS TO REPRODUCE
1. Open two windows.
2. Hold the `Alt` key, then press `TAB` twice, so the window switcher cycles back to the current window.
3. Release the `Alt` key.
4. Now the window titlebar is `active`, but the window body is visually `inactive`.
5. Press any key.
6. Now the window body is visually `active`.


SOFTWARE/OS VERSIONS
Operating System: Arch Linux 
KDE Plasma Version: 5.90.0
KDE Frameworks Version: 5.246.0
Qt Version: 6.6.1
Kernel Version: 6.6.3-arch1-1 (64-bit)
Graphics Platform: offscreen
Processors: 12 × AMD Ryzen 5 5600H with Radeon Graphics
Memory: 13.5 GiB of RAM
Graphics Processor: AMD Radeon Graphics
Comment 1 Nate Graham 2023-12-05 21:28:23 UTC
Can reproduce with those steps.
Comment 2 liujie01 2024-01-05 08:02:39 UTC
It seems that the keyboard focus does not revert to the originally activated window when the window switcher is closed.
Comment 3 fanzhuyifan 2024-01-11 01:43:59 UTC
Git commit e427ad73aa1d4a9278c857b35deec5564a319c49 by Yifan Zhu, on behalf of Jie Liu.
Committed on 11/01/2024 at 02:28.
Pushed by fanzhuyifan into branch 'master'.

update keyboard focus when window switcher is closed.

Signed-off-by: Jie Liu <liujie01@kylinos.cn>

M  +4    -0    src/input.cpp

https://invent.kde.org/plasma/kwin/-/commit/e427ad73aa1d4a9278c857b35deec5564a319c49
Comment 4 Vlad Zahorodnii 2024-01-12 10:48:49 UTC
Git commit 2292ad8bd01c2cebbf31b65721996e8c344a28db by Vlad Zahorodnii, on behalf of Jie Liu.
Committed on 12/01/2024 at 11:37.
Pushed by vladz into branch 'Plasma/6.0'.

update keyboard focus when window switcher is closed.

Signed-off-by: Jie Liu <liujie01@kylinos.cn>


(cherry picked from commit e427ad73aa1d4a9278c857b35deec5564a319c49)

M  +4    -0    src/input.cpp

https://invent.kde.org/plasma/kwin/-/commit/2292ad8bd01c2cebbf31b65721996e8c344a28db