update keyboard focus when window switcher is closed.

BUG:477885

Signed-off-by: Jie Liu <liujie01@kylinos.cn>